Fixed the login page, removed the circles, dark mode/light mode as it is not needed, and fixed the logo

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,7 +4,7 @@
     --bg-color: #F5F5F5;
     --hover-color: #DFF1F1;
     --selected-color: #BBD5DA;
-    --main-color: #FF0000;
+    --main-color: #E2725B;
 }
 
 [data-theme="dark"] {
@@ -12,7 +12,7 @@
   --bg-color: #1E1E1E;
   --hover-color: #2A3A3A;
   --selected-color: #3A4A4A;
-  --main-color: #FF4D4D;
+  --main-color: #E2725B;
 }
 
 body {
